Lecture 05 - corrected typo found by Katerina Nejedlikova
Closes #30

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -423,7 +423,7 @@ QtRvSim \url{https://github.com/cvut/qtrvsim}
 \includegraphics[width=0.85\textwidth]{hazard_ctrl.pdf}
 
 \begin{itemize}
- \item Výsledek není známý dříve naž ve čtvrtém cyklu, poté se nahraje do PC
+ \item Výsledek není známý dříve než ve čtvrtém cyklu, poté se nahraje do PC
        a tak první instrukce na cílové adrese skoku může být načtena až v cyklu pátém
  \item Skoky takto představují zásadní omezení využití času výkonných jednotek v pipeline
 \end{itemize}
