Lecture 05 - corrected typo found by Jakub Stolba
Closes #29

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -469,7 +469,7 @@ QtRvSim \url{https://github.com/cvut/qtrvsim}
 \begin{itemize}
  \item Jaká bude maximální dosažitelná frekvence procesoru?
  \item Který stupeň je nejpomalejší?
- \item Minimální přípustná perioda cyklu je daná nepomalejším stupněm
+ \item Minimální přípustná perioda cyklu je daná nejpomalejším stupněm
  \item V našem případě se jedná o paměti \\
        $T_C = 300$\,ns $\rightarrow$ $f_{clk\,max} = 3\,333$\,kHz \\
        pokud neuvažujeme cykly navíc na plnění pipeline (žádná pozastavení
