Lecture 05 - corrected typo found by Erik Sindelar
Closes #28

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/lekce05-pipeline.tex
+++ b/05-pipeline/lekce05-pipeline.tex
@@ -19,7 +19,7 @@
 
 \begin{itemize}
  \item Navrhnout úpravy procesoru z lekce 3 tak, aby využíval zřetězené zpracování (pipelining) a tím ho bylo možné zrychlit
- \item Stále uvažujeme následující instrucke: \texttt{add}, \texttt{sub}, \texttt{and}, \texttt{or}, \texttt{slt}, \texttt{addi}, \texttt{lw}, \texttt{sw}, a \texttt{beq}
+ \item Stále uvažujeme následující instrukce: \texttt{add}, \texttt{sub}, \texttt{and}, \texttt{or}, \texttt{slt}, \texttt{addi}, \texttt{lw}, \texttt{sw}, a \texttt{beq}
  \item Kódování instrukcí také zůstává
 \end{itemize}
 
