lecture 06 en: prepare images for English version.
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/apo-lecture04-memory-en.tex
+++ b/04-memory/apo-lecture04-memory-en.tex
@@ -292,7 +292,7 @@ All of these types are predominantly optimized for throughput, not random access
 \section{Cache Memory to Speed Up Data Access}
 
 \begin{frame}
-\frametitle{memory Hierarchy from CPU Registers to SSD}
+\frametitle{Memory Hierarchy from CPU Registers to SSD}
 
 {
 \centering
