Lecture 07 - corrected typo found by Alex Olivier Michaud
Closes #32

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/07-io/lekce07-io.tex
+++ b/07-io/lekce07-io.tex
@@ -109,7 +109,7 @@ Příklady periférií komunikujících s lidmi:
 \item tiskárny/scanery -- přenosová rychlost podle připojení, na latency nezáleží (v řádech vteřin/minut)
 \end{itemize}
 
-Příklady periférií pro kounikaci mezi počítači
+Příklady periférií pro komunikaci mezi počítači
 \begin{itemize}
 \item modem -- první modemy 115,2kb/s, LTE max 300 Mb/s, 5G až 500Mb/s
 \item sítě/WLAN -- od 10 Mb/s přes 1Gb/s až po 1Tb/s
