Lecture 08 - corrected typo found by Martin Benjamín Mičko
Closes #53

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -290,7 +290,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 
 \begin{itemize}
 \item Samostatné kanály pro adresu a data
-\item Přenos proběhne vždy při soběhu xVALID a xREADY
+\item Přenos proběhne vždy při souběhu xVALID a xREADY
 \end{itemize}
 
 \end{frame}
