Lecture 08 - corrected typo found by Thi Phuong Lien Tranová
Closes #55

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -230,7 +230,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
  \item L2 SP je sdílena oběma jádry Cortex-A9. Vlastnosti:
  \begin{itemize}
    \item velikost 512\,kB
-   \item 8-cestn2 asociativní
+   \item 8-cestně asociativní
    \item délka bloku (řádky) 32 bajtů
    \item politika výměny je pseudonáhodná,
    \item  podporuje zpětný zápis (write-back), přímý zápis (write-through) s a bez alokace
