Lecture 08 - corrected typo found by Thi Phuong Lien Tranová
Closes #56

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -18,7 +18,7 @@
 \frametitle{Cíl dnešní přednášky}
 
 \begin{itemize}
- \item Seznámení s koponemtami/kontrukcí výukového kitu
+ \item Seznámení s koponemtami/konstrukcí výukového kitu
  \item Komunikace a základní práce s kitem
  \item Princip a přístup na displej z tekutých krystalů (LCD)
  \item Barevné modely pro vykreslování
