Lecture 06 - corrected typo found by Leila Babayeva
Closes #36

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/06-predictors/lekce06-predictors.tex
+++ b/06-predictors/lekce06-predictors.tex
@@ -124,7 +124,7 @@ Paralelní zpracování na úrovni instrukcí (Instruction Level Parallelism, IL
 \begin{frame}
 \frametitle{Paralelismus na úrovni instrukcí}
 
-Zřetězený procesor -- piplened procesor
+Zřetězený procesor -- pipelined procesor
 \includegraphics[width=0.85\textwidth]{pipeline.pdf}
 
 Superskalární procesor -- super scalar procesor
