Lecture 10 - corrected typos found by Kateřina Nejedlíková
Closes #44 #45

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/lekce10-call.tex
+++ b/10-call/lekce10-call.tex
@@ -348,7 +348,7 @@ Activation frame obsahuje:
 \begin{frame}
 \frametitle{Konvence volání funkce}
 
-Každý register buď nastavuje a je za něj zodpovědný volající (caller), nebo volaný (callee). 
+Každý registr buď nastavuje a je za něj zodpovědný volající (caller), nebo volaný (callee).
 
 \begin{tabular}{|c|c|p{4cm}|c|}\hline
 Symbolické & Registr & Popis & Ukládá \\
@@ -459,7 +459,7 @@ jal ra,10054 <secti>
 \begin{frame}
 \frametitle{Překlad funkce - jednoduchá funkce}
 
-Příklad s málo parametry bez vnitřního volání funkce se čtyřmi lokálními proměnými.
+Příklad s málo parametry bez vnitřního volání funkce se čtyřmi lokálními proměnnými.
 \begin{columns}
 \begin{column}{0.65\textwidth}
 \begin{itemize}
@@ -495,7 +495,7 @@ Ukončení funkce:
 \begin{frame}[fragile,shrink=5]
 \frametitle{Překlad funkce}
 
-Příklad s 10 parametry, volání funkce uvnitř funkce, se dvěma lokálními proměnými.
+Příklad s 10 parametry, volání funkce uvnitř funkce, se dvěma lokálními proměnnými.
 
 \begin{columns}
 \begin{column}{0.35\textwidth}
