Lecture 10 - corrected punctuation reported by Martin Benjamín Mičko
Closes #46

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/10-call/lekce10-call.tex
+++ b/10-call/lekce10-call.tex
@@ -565,7 +565,7 @@ ret
  \item Nevýhody použití fp:
 \begin{itemize}
  \item Zpomaluje program, jedná se sice jen o několik instrukcí při vstupu a ukončení funkce, ale pokud se funkce volá často a její tělo je krátké, může to být i značné zpomalení.
- \item Fp obsadí registr s0, který by se dal využít pro uchování hodnoty. Pokud by došli volné registry, pak se hodnota musí uložit na zásobník do paměti RAM (přes cache) což je pomalejší než využití registru.
+ \item Fp obsadí registr s0, který by se dal využít pro uchování hodnoty. Pokud by došly volné registry, pak se hodnota musí uložit na zásobník do paměti RAM (přes cache), což je pomalejší než využití registru.
 \end{itemize}
 \end{itemize}
 \end{frame}
