Lecture 11 - corrected missing punctuation found by Jáchym Zamouřil
Closes #47

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/11-architekturax86/lekce11-x86.tex
+++ b/11-architekturax86/lekce11-x86.tex
@@ -473,7 +473,7 @@ Návrat z funkce\\
 
 \begin{itemize}
 \item Návratová hodnota funkce bude uložena v registru eax.
-\item Registry ebp, ebx, esi, edi nesmí funkce změnit. Pokud je chce funkce využít musí být uložena původní hodnota na zásobník.
+\item Registry ebp, ebx, esi, edi nesmí funkce změnit. Pokud je chce funkce využít, musí být uložena původní hodnota na zásobník.
 \end{itemize}
 
 \end{frame}
